--- a/task03/task03.html
+++ b/task03/task03.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Task Three</title>
-    <link rel="stylesheet" type="text/css" href="Task03.css"/>
+    <link rel="stylesheet" type="text/css" href="task03.css"/>
 </head>
 <body>
 <div class="container">
