--- a/task06/index.html
+++ b/task06/index.html
@@ -12,9 +12,9 @@
         <h6>ife.baidu.com</h6>
     </div>
     <h6 class="head-end-text">2016.05</h6>
-
+    <hr noshade="noshade">
 </header>
-<hr noshade="noshade">
+
 <section class="container content-part-one">
     <div class="img-container">
         <img src="assets/images/tasktitle.png">
@@ -27,14 +27,114 @@
         <p class="about-technologe-text">About technology about technology about technology</p>
         <p class="seven-hundred">700</p>
 
-        <p>3.2 CSS</p>
+        <p class="three-two">3.2</p>
+        <p class="css-css">css</p>
 
-        <p>csssssssssss</p>
+        <p class="csssssss">csssssssssss</p>
 
 
 
     </aside>
 
+</section>
+<section class="container content-part-two">
+    <div class="part-two-div-one">
+        <h3>What</h3>
+        <p>
+            走廊灯关上 书包放 走到房间窗外望回
+            想刚买的书 一本名叫半岛铁盒放在床 边堆好多 第一页 第六页 第七页序
+            我永远 都想不到陪我看这书的你会要走
+            不再是 不再有 现在已看不到
+            铁盒的钥匙孔 透了光 看见它 锈了好久
+            好旧好旧 外围的灰尘包围了我
+            好暗好暗 铁盒的钥匙我找不到
+            放在糖果旁的是我 很想回忆的甜
+            然而过滤了你和我 沦落而成美
+            沉在盒子里的是你 给我的快乐
+            我很想记得可是我 记不得
+            为什么这样子 你拉着我 说你有些犹豫
+            怎么这样子 雨还没停 你就撑伞要走
+        </p>
+    </div>
+    <div class="part-two-div-two">
+        <h3>When</h3>
+        <p>
+            走廊灯关上 书包放 走到房间窗外望回
+            想刚买的书 一本名叫半岛铁盒放在床 边堆好多 第一页 第六页 第七页序
+            我永远 都想不到陪我看这书的你会要走
+            不再是 不再有 现在已看不到
+            铁盒的钥匙孔 透了光 看见它 锈了好久
+            好旧好旧 外围的灰尘包围了我
+            好暗好暗 铁盒的钥匙我找不到
+            放在糖果旁的是我 很想回忆的甜
+            然而过滤了你和我 沦落而成美
+            沉在盒子里的是你 给我的快乐
+            我很想记得可是我 记不得
+            为什么这样子 你拉着我 说你有些犹豫
+
+        </p>
+    </div>
+    <div class="part-two-div-three">
+        <h3>How</h3>
+        <p class="div-three-p-one">
+            走廊灯关上 书包放 走到房间窗外望回
+            想刚买的书 一本名叫半岛铁盒放在床 边堆好多 第一页 第六页 第七页序
+            我永远
+        </p>
+        <p>What ------ <span>40%</span></p>
+        <p>What ------ <span>30%</span></p>
+        <p>What ------ <span>30%</span></p>
+    </div>
+</section>
+<section class="container content-part-three">
+    <div class="part-three-left">
+        <span class="left-title">THE</span>
+        <span class="left-second-title">TECHNOLOGY OF FRONT</span>
+        <h2>前端技术领域</h2>
+
+        <p class="text-one">
+            走廊灯关上 书包放 走到房间窗外望回；
+            想刚买的书 一本名叫半岛铁盒放在床 边堆好多 第一页 第六页 第七页序；
+            我永远 都想不到陪我看这书的你会要走；
+            不再是 不再有 现在已看不到；
+            铁盒的钥匙孔 透了光 看见它 锈了好久；
+            好旧好旧 外围的灰尘包围了我；
+            好暗好暗 铁盒的钥匙我找不到；
+            放在糖果旁的是我 很想回忆的甜；
+            <img src="assets/images/partthreeleft.png">
+            然而过滤了你和我 沦落而成美；
+            沉在盒子你给我的快乐我很想记得可是我
+            记不得为什么这样子 你拉着我 说你有些犹豫怎么这样子 雨还没停 你就伞要走
+        </p>
+
+        <p class="text-two">
+            记不得为什么这样子 你拉着我 说你有些犹豫怎么这样子 雨还没停 你就伞要走
+            走廊灯关上 书包放 走到房间窗外望回；
+            想刚买的书 一本名叫半岛铁盒放在床 边堆好多 第一页 第六页 第七页序；
+            我永远 都想不到陪我看这书的你会要走；
+            不再是 不再有 现在已看不到；
+            铁盒的钥匙孔 透了光 看见它 锈了好久；
+            好旧好旧 外围的灰尘包围了我；
+            好暗好暗 铁盒的钥匙我找不到；
+            放在糖果旁的是我 很想回忆的甜；
+            然而过滤了你和我 沦落而成美；
+        </p>
+        <p class="text-three">
+            好暗好暗 铁盒的钥匙我找不到；
+            放在糖果旁的是我 很想回忆的甜；
+            然而过滤了你和我 沦落而成美
+        </p>
+
+    </div>
+    <div class="part-three-right">
+
+            <img src="assets/images/partthreeright.png">
+
+
+        <div class="right-content">
+          
+        </div>
+    </div>
 </section>
 </body>
 </html>
