--- a/task06/index.html
+++ b/task06/index.html
@@ -99,9 +99,10 @@
             不再是 不再有 现在已看不到；
             铁盒的钥匙孔 透了光 看见它 锈了好久；
             好旧好旧 外围的灰尘包围了我；
+            <img src="assets/images/partthreeleft.png">
             好暗好暗 铁盒的钥匙我找不到；
             放在糖果旁的是我 很想回忆的甜；
-            <img src="assets/images/partthreeleft.png">
+
             然而过滤了你和我 沦落而成美；
             沉在盒子你给我的快乐我很想记得可是我
             记不得为什么这样子 你拉着我 说你有些犹豫怎么这样子 雨还没停 你就伞要走
@@ -118,9 +119,14 @@
             好暗好暗 铁盒的钥匙我找不到；
             放在糖果旁的是我 很想回忆的甜；
             然而过滤了你和我 沦落而成美；
+            好暗好暗 铁盒的钥匙我找不到；
+            放在糖果旁的是我 很想回忆的甜；
+            然而过滤了你和我 沦落而成美；
         </p>
         <p class="text-three">
             好暗好暗 铁盒的钥匙我找不到；
+            放在糖果旁的是我 很想回忆的甜；
+            然而过滤了你和我 沦落而成美
             放在糖果旁的是我 很想回忆的甜；
             然而过滤了你和我 沦落而成美
         </p>
