--- a/task06/index.html
+++ b/task06/index.html
@@ -33,7 +33,6 @@
         <p class="csssssss">csssssssssss</p>
 
 
-
     </aside>
 
 </section>
@@ -132,14 +131,26 @@
         </p>
 
     </div>
+
     <div class="part-three-right">
-
-            <img src="assets/images/partthreeright.png">
-
-
-        <div class="right-content">
-          
-        </div>
+        <img src="assets/images/partthreeright.png">
+        <p class="right-title-one">前端技术</p>
+        <p>前端技术前端技术</p>
+        <p class="right-content-two">
+        <ul>
+            <li>
+                前端前端前端前端前端前端.....................................................前端
+            </li>
+            <li>
+                前端前端前端前端.................................................................前前端
+            </li>
+            <li>
+                前端前端前端前端前端前端前端.............................................前端
+            </li>
+        </ul>
+        <span class="o-text">O</span>
+        <span>"hello world hello world hello world hello world hello world hello world hello world"</span>
+        </p>
     </div>
 </section>
 </body>
