--- a/task06/index.html
+++ b/task06/index.html
@@ -133,24 +133,45 @@
     </div>
 
     <div class="part-three-right">
-        <img src="assets/images/partthreeright.png">
-        <p class="right-title-one">前端技术</p>
-        <p>前端技术前端技术</p>
-        <p class="right-content-two">
-        <ul>
-            <li>
-                前端前端前端前端前端前端.....................................................前端
-            </li>
-            <li>
-                前端前端前端前端.................................................................前前端
-            </li>
-            <li>
-                前端前端前端前端前端前端前端.............................................前端
-            </li>
-        </ul>
-        <span class="o-text">O</span>
-        <span>"hello world hello world hello world hello world hello world hello world hello world"</span>
-        </p>
+        <div class="right-image">
+            <img src="assets/images/partthreeright.png">
+            <div class="img-label">
+                <span class="label-one">前端技术</span>
+                <span class="label-two">前端技术前端技术</span>
+            </div>
+
+        </div>
+
+        <div class="part-three-right-div">
+            <ul>
+                <li>
+                    前端前端前端前端前端前端.....................................................前端
+                </li>
+                <li>
+                    前端前端前端前端.................................................................前前端
+                </li>
+                <li>
+                    前端前端前端前端前端前端前端.............................................前端
+                </li>
+            </ul>
+
+
+            <div class="number-box">
+                <p class="o-text">0</p>
+                <p class="number-child-one">ONE TWO<br> THREE FOR FIVE</p>
+                <p class="number-child-two">hello world hello world hello world</p>
+
+            </div>
+
+    <p class="left-bracket">“</p>
+    <p class="bracket-content">hello world hello world hello world hello world hello world hello world hello</p>
+    <p class="right-bracket">”</p>
+
+
+
+        </div>
+
+
     </div>
 </section>
 </body>
