--- a/task06/index.html
+++ b/task06/index.html
@@ -145,13 +145,13 @@
         <div class="part-three-right-div">
             <ul>
                 <li>
-                    前端前端前端前端前端前端.....................................................前端
+                    前端前端前端前端前端前端...............................前端
                 </li>
                 <li>
-                    前端前端前端前端.................................................................前前端
+                    前端前端前端前端...............................................前前端
                 </li>
                 <li>
-                    前端前端前端前端前端前端前端.............................................前端
+                    前端前端前端前端前端前端前端......................前端
                 </li>
             </ul>
 
