--- a/task06/index.html
+++ b/task06/index.html
@@ -126,8 +126,7 @@
             好暗好暗 铁盒的钥匙我找不到；
             放在糖果旁的是我 很想回忆的甜；
             然而过滤了你和我 沦落而成美
-            放在糖果旁的是我 很想回忆的甜；
-            然而过滤了你和我 沦落而成美
+            放在糖果旁的是我
         </p>
 
     </div>
@@ -174,5 +173,8 @@
 
     </div>
 </section>
+<footer class="container">
+    <p>ife.baidu.com</p>
+</footer>
 </body>
 </html>
