--- a/task07/index.html
+++ b/task07/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Simple Web Page</title>
+    <link href="assets/stylesheets/main.css">
 </head>
 <body>
 
