--- a/task07/index.html
+++ b/task07/index.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Simple Web Page</title>
-    <link href="assets/stylesheets/main.css">
+    <link rel="stylesheet" href="assets/stylesheets/main.css">
 </head>
 <body>
-
+<header class="container">
+    <h1>新世界</h1>
+    <ul>
+        <li>首页</li>
+        <li>最新活动</li>
+        <li>项目介绍</li>
+        <li>爱心社区</li>
+        <li>关于我们</li>
+        <li>登录</li>
+    </ul>
+</header>
 </body>
 </html>
