--- a/task07/index.html
+++ b/task07/index.html
@@ -17,5 +17,8 @@
         <li>登录</li>
     </ul>
 </header>
+<section class="container p-one">
+    <img src="assets/imgs/section_1.jpg">
+</section>
 </body>
 </html>
