--- a/task07/index.html
+++ b/task07/index.html
@@ -6,19 +6,91 @@
     <link rel="stylesheet" href="assets/stylesheets/main.css">
 </head>
 <body>
-<header class="container">
+<header class="container header">
+    <img src="assets/imgs/new.png">
     <h1>新世界</h1>
     <ul>
-        <li>首页</li>
-        <li>最新活动</li>
-        <li>项目介绍</li>
-        <li>爱心社区</li>
-        <li>关于我们</li>
-        <li>登录</li>
+        <li><a>首页</a></li>
+        <li><a>最新活动</a></li>
+        <li><a>项目介绍</a></li>
+        <li><a>爱心社区</a></li>
+        <li><a>关于我们</a></li>
+        <li><a>登录</a></li>
     </ul>
 </header>
 <section class="container p-one">
     <img src="assets/imgs/section_1.jpg">
+    <div>
+        <h1>Time of new life</h1>
+        <h3>新时代,年轻的人们让我们一起<br>体验新生活,享受新生活</h3>
+        <button>开始体验</button>
+    </div>
+
+</section>
+<section class="container p-two">
+    <div>
+        <img src="assets/imgs/circle.png">
+        <p>打造全新世界观,让你更爱你的生活</p>
+    </div><!--
+    --><div>
+        <img src="assets/imgs/flag.png">
+        <p>丰富多彩的公益活动,发挥新世界的主人公意识</p>
+    </div><!--
+    --><div>
+        <img src="assets/imgs/flower.png">
+        <p>时尚的新理念,超前体验未知的生活</p>
+    </div><!--
+    --><div>
+        <img src="assets/imgs/square.png">
+        <p>完善的培养机制,培养你全新的世界观</p>
+    </div>
+</section>
+<section class="container p-three">
+    <div class="three-one">
+        <img src="assets/imgs/new.png">
+        <p>关于新世界，你不知道的还有什么?</p>
+    </div>
+    <div class="three-two">
+        <img class="map" src="assets/imgs/map.jpg">
+
+        <div class="three-two-text">
+            <h3>查找新世界城市活动信息</h3>
+            <p>每个城市都有不同的活动信息 请自助查询您所需要了解的城市</p>
+            <div class="select-area">
+
+                <div class="dropdown select-area-child">
+                    <input value="Country">
+                    <img src="assets/imgs/arrow.png">
+                    <!--<input value="Country"><img src="assets/imgs/arrow.png"></input>-->
+                    <div class="dropdown-content">
+                        <p>China</p>
+                        <p>British</p>
+                    </div>
+                </div><!--
+            --><div class="dropdown select-area-child">
+                <input value="State">
+                <img src="assets/imgs/arrow.png">
+                <div class="dropdown-content">
+                    <p>Southampton</p>
+                    <p>Shanghai</p>
+                    <p>Jiangsu</p>
+                </div>
+            </div><!--
+            --><div class="dropdown select-area-child">
+                <input value="City">
+                <img src="assets/imgs/arrow.png">
+                <div class="dropdown-content">
+                    <p>Yancheng</p>
+                </div>
+            </div><!--
+            --><div class="area-button">
+                <button class=" select-area-child">Search</button>
+            </div>
+            </div>
+        </div>
+
+
+    </div>
 </section>
 </body>
 </html>
