--- a/task07/index.html
+++ b/task07/index.html
@@ -32,15 +32,18 @@
         <img src="assets/imgs/circle.png">
         <p>打造全新世界观,让你更爱你的生活</p>
     </div><!--
-    --><div>
+    -->
+    <div>
         <img src="assets/imgs/flag.png">
         <p>丰富多彩的公益活动,发挥新世界的主人公意识</p>
     </div><!--
-    --><div>
+    -->
+    <div>
         <img src="assets/imgs/flower.png">
         <p>时尚的新理念,超前体验未知的生活</p>
     </div><!--
-    --><div>
+    -->
+    <div>
         <img src="assets/imgs/square.png">
         <p>完善的培养机制,培养你全新的世界观</p>
     </div>
@@ -57,35 +60,19 @@
             <h3>查找新世界城市活动信息</h3>
             <p>每个城市都有不同的活动信息 请自助查询您所需要了解的城市</p>
             <div class="select-area">
-
-                <div class="dropdown select-area-child">
-                    <input value="Country">
-                    <img src="assets/imgs/arrow.png">
-                    <!--<input value="Country"><img src="assets/imgs/arrow.png"></input>-->
-                    <div class="dropdown-content">
-                        <p>China</p>
-                        <p>British</p>
-                    </div>
-                </div><!--
-            --><div class="dropdown select-area-child">
-                <input value="State">
-                <img src="assets/imgs/arrow.png">
-                <div class="dropdown-content">
-                    <p>Southampton</p>
-                    <p>Shanghai</p>
-                    <p>Jiangsu</p>
-                </div>
-            </div><!--
-            --><div class="dropdown select-area-child">
-                <input value="City">
-                <img src="assets/imgs/arrow.png">
-                <div class="dropdown-content">
-                    <p>Yancheng</p>
-                </div>
-            </div><!--
-            --><div class="area-button">
-                <button class=" select-area-child">Search</button>
-            </div>
+                <select>
+                    <option>China</option>
+                    <option>British</option>
+                </select><!--
+            --><select>
+                <option>Southampton</option>
+                <option>Shanghai</option>
+                <option>Jiangsu</option>
+            </select><!--
+            --><select>
+                <option>Yancheng</option>
+            </select><!--
+            --><button class=" select-area-child">Search</button>
             </div>
         </div>
 
