--- a/task07/index.html
+++ b/task07/index.html
@@ -32,18 +32,15 @@
         <img src="assets/imgs/circle.png">
         <p>打造全新世界观,让你更爱你的生活</p>
     </div><!--
-    -->
-    <div>
+    --><div>
         <img src="assets/imgs/flag.png">
         <p>丰富多彩的公益活动,发挥新世界的主人公意识</p>
     </div><!--
-    -->
-    <div>
+    --><div>
         <img src="assets/imgs/flower.png">
         <p>时尚的新理念,超前体验未知的生活</p>
     </div><!--
-    -->
-    <div>
+    --><div>
         <img src="assets/imgs/square.png">
         <p>完善的培养机制,培养你全新的世界观</p>
     </div>
@@ -57,7 +54,7 @@
         <img class="map" src="assets/imgs/map.jpg">
 
         <div class="three-two-text">
-            <h3>查找新世界城市活动信息</h3>
+            <h3>查找新世界<span>城</span>市活动信息</h3>
             <p>每个城市都有不同的活动信息 请自助查询您所需要了解的城市</p>
             <div class="select-area">
                 <select>
@@ -78,6 +75,31 @@
 
 
     </div>
+</section>
+<section class="container p-four">
+    <div style="background: #F7F7F7">
+        <div style="padding-left: 145px;">
+            <img src="assets/imgs/pic_14.jpg">
+            <p>北京活动</p>
+            <p>新社区大联盟</p>
+        </div>
+        <div>
+            <p>上海活动</p>
+            <p>夜上海新景观探索</p>
+            <img src="assets/imgs/pic_20.jpg">
+        </div>
+        <div>
+            <img src="assets/imgs/pic_17.jpg">
+            <p>深圳活动</p>
+            <p>全新海岸线观点站</p>
+        </div>
+        <div>
+            <img src="assets/imgs/pic_11.jpg">
+            <p>香港活动</p>
+            <p>奢侈消费大派送</p>
+        </div>
+    </div>
+
 </section>
 </body>
 </html>
