--- a/task07/index.html
+++ b/task07/index.html
@@ -77,7 +77,8 @@
     </div>
 </section>
 <section class="container p-four">
-    <div style="background: #F7F7F7">
+
+    <div style="background: #000">
         <div style="padding-left: 145px;">
             <img src="assets/imgs/pic_14.jpg">
             <p>北京活动</p>
@@ -99,6 +100,8 @@
             <p>奢侈消费大派送</p>
         </div>
     </div>
+
+
 
 </section>
 </body>
