--- a/task07/index.html
+++ b/task07/index.html
@@ -78,26 +78,26 @@
 </section>
 <section class="container p-four">
 
-    <div style="background: #000">
+    <div class="p-four-one">
         <div style="padding-left: 145px;">
             <img src="assets/imgs/pic_14.jpg">
-            <p>北京活动</p>
-            <p>新社区大联盟</p>
+            <p class="p-four-txt1">北京活动</p>
+            <p class="p-four-txt2">新社区大联盟</p>
         </div>
         <div>
-            <p>上海活动</p>
-            <p>夜上海新景观探索</p>
+            <p class="p-four-txt3">上海活动</p>
+            <p class="p-four-txt2">夜上海新景观探索</p>
             <img src="assets/imgs/pic_20.jpg">
         </div>
         <div>
             <img src="assets/imgs/pic_17.jpg">
-            <p>深圳活动</p>
-            <p>全新海岸线观点站</p>
+            <p class="p-four-txt1">深圳活动</p>
+            <p class="p-four-txt2">全新海岸线观点站</p>
         </div>
         <div>
             <img src="assets/imgs/pic_11.jpg">
-            <p>香港活动</p>
-            <p>奢侈消费大派送</p>
+            <p class="p-four-txt1">香港活动</p>
+            <p class="p-four-txt2">奢侈消费大派送</p>
         </div>
     </div>
 
