--- a/task17/task17.html
+++ b/task17/task17.html
@@ -2,8 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>IFE JavaScript Task 01</title>
-    <script src="task.js"></script>
+    <title>IFE JavaScript Task 17</title>
 </head>
 <body>
 <fieldset id="form-gra-time">
@@ -22,5 +21,6 @@
 
 <div class="aqi-chart-wrap">
 </div>
+<script src="task17.js"></script>
 </body>
 </html>
